<resources>
    <string name="app_name">Lightning Magic</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">Search a card!</string>
    <string name="ft_placeholder">\"The sparkmage shrieked, calling on the rage of the storms of his youth. To his surprise, the sky responded with a fierce energy he’d never thought to see again.\"</string>
    <string name="fn_placeholder">– Lightning Bolt</string>
    <string name="cf">The sparkmage shrieked, calling on the rage of the storms of his youth. To his surprise, the sky responded with a fierce energy he’d never thought to see again.</string>
    <string name="co">Lightning Bolt deals 3 damage to any target.</string>
    <string name="ct">Instant</string>
    <string name="cc">{R}</string>
    <string name="cn">Lightning Bolt</string>
    <string name="cpow">""</string>
    <string name="ctou">""</string>
    <string name="title_activity_advanced_search">AdvancedSearch</string>
    <string name="asname">Name</string>
    <string name="ascost">Cost</string>
    <string name="ascolor">Color</string>
    <string name="astype">Type</string>
    <string name="assubtype">Subtype</string>
    <string name="asrarity">Rarity</string>
    <string name="asset">Set</string>
    <string name="asoracle_text">Oracle Text</string>
    <string name="asflavor_text">Flavor Text</string>
    <string name="asartist">Artist</string>
    <string name="aspow">Pow</string>
    <string name="astou">Tou</string>
    <string name="asloy">Loy</string>
    <string name="asbarra">/</string>
    <string name="asbarralarga">—</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
