<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="359dp"
    android:layout_height="503dp"
    android:background="@drawable/ic_border">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="336dp"
        android:layout_height="451dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/ic_color_frame" />



    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="323dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_textline"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038">

        <EditText
            android:id="@+id/as_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/asname"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/as_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/ascost" />

            <EditText
                android:id="@+id/as_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:hint="@string/ascolor" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="323dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_textline"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/as_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:background="@android:color/transparent"
                android:hint="@string/astype"
                android:paddingEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/asbarralarga" />

            <EditText
                android:id="@+id/as_subtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/assubtype"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"

            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/as_rarity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/asrarity" />

            <EditText
                android:id="@+id/as_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:hint="@string/asset" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="311dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/ic_text_box"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/as_oracle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/asoracle_text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/as_flavor"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/asflavor_text"
            android:textAlignment="center" />
    </LinearLayout>


    <!--<EditText-->
        <!--android:id="@+id/as_artist"-->
        <!--android:layout_width="157dp"-->
        <!--android:layout_height="21dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:background="@drawable/ic_textline"-->
        <!--android:hint="@string/asartist"-->
        <!--android:paddingEnd="175dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.043"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout2"-->
        <!--app:layout_constraintVertical_bias="1.0" />-->

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="88dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/ic_pt_box_b"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="84dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_pt_box_w"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/as_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:hint="   P "
            android:textAlignment="viewEnd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/asbarra" />

        <EditText
            android:id="@+id/as_toughness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:hint=" T    " />
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/asbarra" />

        <EditText
            android:id="@+id/as_loyalty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@android:Color/transparent"
            android:hint="@string/asloy" />
-->
    </LinearLayout>

    <ImageView
        android:id="@+id/as_placeholder"
        android:layout_width="310dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        app:srcCompat="@drawable/ic_lightning" />

    <!--<ImageView-->
        <!--android:id="@+id/imageView2"-->
        <!--android:layout_width="343dp"-->
        <!--android:layout_height="485dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.0"-->
        <!--app:srcCompat="@drawable/ic_color_frame" />-->


</android.support.constraint.ConstraintLayout>